feat: add full blog CRUD with layout and API logic

--- a/package.json
+++ b/package.json
@@ -9,24 +9,39 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/montserrat": "^5.2.6",
+    "@fontsource/mulish": "^5.2.6",
     "@tanstack/react-query": "^5.80.7",
+    "@tryghost/admin-api": "^1.13.16",
+    "@ts-ghost/admin-api": "^4.2.1",
+    "@ts-ghost/content-api": "^4.1.0",
     "axios": "^1.9.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.3.3",
+    "polished": "^4.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/styled-components": "^5.1.34",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
     "babel-plugin-styled-components": "^2.1.4",
-    "eslint": "^9.28.0",
-    "eslint-config-next": "15.3.3",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "^15.3.3",
     "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-styled-components-a11y": "^2.2.1",
     "prettier": "^3.5.3",
     "typescript": "^5"
   }
