--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "types/**/*.d.ts"
+    "types/**/*.d.ts",
+    "jest.config.js"
   ],
   "exclude": [
     "node_modules"
